gateway/1.13/modules/ROOT/pages/flex-gateway-llm-proxy-token-reports.adoc
= Viewing Token Usage and LLM Metrics
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-notice-banner-message: Use the enhanced MuleSoft experience to secure and monitor services across providers, apply governance policies, and manage LLM usage, costs, and routing with consistent governance across models. <a href="https://docs.mulesoft.com/general/exp-instances-add" target="_blank" rel="noopener">Learn more.</a>


[[view-token-usage-reports]]
== View Token Usage Reports

With Token Usage reports, you can view the amount of API tokens each LLM Proxy uses for individual models. Token usage is collected by the xref:policies-included-llm-proxy-core.adoc[LLM Proxy Core Policy].

NOTE: To limit token usage, apply the xref:policies-included-llm-token-rate-limit.adoc[LLM Token Based Rate Limit policy] to your LLM Proxy.

To view token usage reports:

. Click you Anypoint Platform profile icon. This is icon of your initials.
. Click *Usage Reports*.
. Select *LLM Proxy* for *Product*.
. Filter between *Usage by Business Group* and *Usage by Application* to see how tokens are being consumed.

To learn more about Usage Reports, see xref:general::usage-reports.adoc[].

NOTE: Gemini models use reasoning tokens. This number is included in *Total tokens* but isn't individually listed.

[[view-api-manager-insights]]
== View API Manager Insights

The API Manager LLM Summary page provides these metrics for your LLM Proxy:

* Total requests per hour
* Total policy violations per hour
* Total errors per hour
* Average response time per hour

To view the LLM Summary page for an LLM Proxy:

. From API Manager, click *LLM Proxies*.
. Click the name of the LLM Proxy you want to view.

To view more detailed metrics and build custom dashboards, click *View more metrics in Anypoint Monitoring dashboard*.